--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: default-route-openshift-image-registry.apps.ocp4.imss.work/fuse-pipelines/spring-boot-mongo-docker-git:v3
+  repository: quay.io/praveenrachamreddy/ci-pipeline:latest
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   #tag: v3
